[gd_scene load_steps=114 format=3 uid="uid://c7ck7ril2jix2"]

[ext_resource type="Script" path="res://player/player.gd" id="1_x43mx"]
[ext_resource type="Script" path="res://player/x_ray.gd" id="3_f3hsb"]
[ext_resource type="Script" path="res://player/abilities/speak/speak.gd" id="3_ne4cx"]
[ext_resource type="PackedScene" uid="uid://qgyqqokyd0ia" path="res://player/abilities/speak/speak_aura.tscn" id="4_8n4by"]
[ext_resource type="Texture2D" uid="uid://comkf4v85d5om" path="res://player/sprites/cata/Artie_Cata_Idle(Left).png" id="5_342we"]
[ext_resource type="PackedScene" uid="uid://deerfyvrmooo6" path="res://new hole detector/hole_detector.tscn" id="6_eb6gp"]
[ext_resource type="Texture2D" uid="uid://bqjfd1v32oxyn" path="res://player/sprites/cata/Artie_Cata_Idle(Right).png" id="6_swl3g"]
[ext_resource type="Script" path="res://player/skin_chooser.gd" id="9_de2wb"]
[ext_resource type="Texture2D" uid="uid://vmglry6qd3nd" path="res://player/sprites/cata/Artie_Cata_Bark(Left).png" id="10_7q0er"]
[ext_resource type="Texture2D" uid="uid://dqthnh4mpyhs3" path="res://player/sprites/cata/Artie_Cata_Walk(Left).png" id="10_8ober"]
[ext_resource type="AudioStream" uid="uid://djv2b57i4uoli" path="res://player/abilities/rolling/sound-effects/SFX_DodgeRoll_Jan.ogg" id="10_jtbrp"]
[ext_resource type="Texture2D" uid="uid://cmvg8b2adks5p" path="res://player/sprites/cata/Artie_Cata_Roll(Left).png" id="10_x1vit"]
[ext_resource type="Texture2D" uid="uid://kcpp3lmly0hu" path="res://player/sprites/cata/Artie_Cata_Bark(Right).png" id="11_d4q4m"]
[ext_resource type="Texture2D" uid="uid://40x043p55wbt" path="res://player/sprites/cata/Artie_Cata_Walk(Right).png" id="11_fmfsl"]
[ext_resource type="AudioStream" uid="uid://8wbpod2ld75h" path="res://player/abilities/rolling/sound-effects/SFX_DodgeWithCollarJingle_Jan.ogg" id="11_wuebg"]
[ext_resource type="Texture2D" uid="uid://caf24wjo8bb4u" path="res://player/sprites/corgi/BarkL_SpriteSheet.png" id="12_n83cc"]
[ext_resource type="Texture2D" uid="uid://td67thxppsx6" path="res://player/sprites/cata/Artie_Cata_Roll(Right).png" id="12_onen2"]
[ext_resource type="Texture2D" uid="uid://brbtdbxos4g1j" path="res://player/sprites/corgi/BarkR_SpriteSheet.png" id="13_j8r3o"]
[ext_resource type="Texture2D" uid="uid://bf2wrgsc3ji5t" path="res://player/sprites/corgi/Static.png" id="14_qfht8"]
[ext_resource type="Texture2D" uid="uid://b3g2htav2127m" path="res://player/sprites/corgi/StaticR.png" id="15_31018"]
[ext_resource type="Texture2D" uid="uid://dx6h34kg88xs2" path="res://player/sprites/corgi/WalkL_SpriteSheet.png" id="16_kiww3"]
[ext_resource type="Texture2D" uid="uid://tr4dk47wiuif" path="res://player/sprites/corgi/WalkR_SpriteSheet.png" id="17_hj2sh"]
[ext_resource type="Texture2D" uid="uid://cv5sjqu4sr28y" path="res://player/sprites/margarita/Margarita_BarkLeft_Spritesheet.png" id="18_fhmj2"]
[ext_resource type="Texture2D" uid="uid://c7ahfktyy4r3r" path="res://player/sprites/margarita/Margarita_BarkRight_Spritesheet.png" id="19_ywkn0"]
[ext_resource type="Texture2D" uid="uid://75x34pxb86dx" path="res://player/sprites/margarita/Margarita_IdleLeft.png" id="20_af0im"]
[ext_resource type="Texture2D" uid="uid://bfiam1qnt30cv" path="res://player/sprites/margarita/Margarita_IdleRight_Spritesheet.png" id="21_fyf2e"]
[ext_resource type="Texture2D" uid="uid://c4mqbp38tvssx" path="res://player/sprites/margarita/Margarita_RollLeft_Spritesheet.png" id="22_ptu2e"]
[ext_resource type="Texture2D" uid="uid://bu43rimfp3dcg" path="res://player/sprites/margarita/Margarita_RollRight_Spritesheet.png" id="23_3dfgs"]
[ext_resource type="Texture2D" uid="uid://f6oohtm5b6x0" path="res://player/sprites/margarita/Margarita_RunLeft_Spritesheet.png" id="24_0ukfm"]
[ext_resource type="Texture2D" uid="uid://cv7to2pfrgt3m" path="res://player/sprites/margarita/Margarita_RunRight_Spritesheet.png" id="25_73gv5"]
[ext_resource type="PackedScene" uid="uid://c5k5rgonv1752" path="res://ui/mouse_cursor/cursor.tscn" id="29_60imv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yvtba"]
atlas = ExtResource("10_7q0er")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_05sh5"]
atlas = ExtResource("10_7q0er")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2okl"]
atlas = ExtResource("11_d4q4m")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_iygst"]
atlas = ExtResource("11_d4q4m")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr2n1"]
atlas = ExtResource("5_342we")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3b3e"]
atlas = ExtResource("5_342we")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8f66"]
atlas = ExtResource("5_342we")
region = Rect2(0, 514, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_4aj4x"]
atlas = ExtResource("5_342we")
region = Rect2(514, 514, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_uysa1"]
atlas = ExtResource("6_swl3g")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_f73ve"]
atlas = ExtResource("6_swl3g")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpt81"]
atlas = ExtResource("6_swl3g")
region = Rect2(0, 514, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_yybw5"]
atlas = ExtResource("6_swl3g")
region = Rect2(514, 514, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xysa"]
atlas = ExtResource("10_x1vit")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsre6"]
atlas = ExtResource("10_x1vit")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_behjk"]
atlas = ExtResource("10_x1vit")
region = Rect2(1028, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfck4"]
atlas = ExtResource("10_x1vit")
region = Rect2(1542, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_e51mw"]
atlas = ExtResource("10_x1vit")
region = Rect2(2056, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7asl"]
atlas = ExtResource("12_onen2")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_tacdh"]
atlas = ExtResource("12_onen2")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfrmb"]
atlas = ExtResource("12_onen2")
region = Rect2(1028, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_whrgj"]
atlas = ExtResource("12_onen2")
region = Rect2(1542, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv8ip"]
atlas = ExtResource("12_onen2")
region = Rect2(2056, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_523rk"]
atlas = ExtResource("10_8ober")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xy01"]
atlas = ExtResource("10_8ober")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxh88"]
atlas = ExtResource("10_8ober")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4urr"]
atlas = ExtResource("10_8ober")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxhoh"]
atlas = ExtResource("11_fmfsl")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tv65"]
atlas = ExtResource("11_fmfsl")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_peidd"]
atlas = ExtResource("11_fmfsl")
region = Rect2(0, 514, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqkrq"]
atlas = ExtResource("11_fmfsl")
region = Rect2(514, 514, 514, 514)

[sub_resource type="SpriteFrames" id="SpriteFrames_r4o7u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvtba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05sh5")
}],
"loop": false,
"name": &"bark_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2okl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iygst")
}],
"loop": false,
"name": &"bark_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr2n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3b3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8f66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4aj4x")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uysa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f73ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpt81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yybw5")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xysa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsre6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_behjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfck4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e51mw")
}],
"loop": false,
"name": &"roll_left",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7asl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tacdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfrmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whrgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv8ip")
}],
"loop": false,
"name": &"roll_right",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_523rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xy01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxh88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4urr")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxhoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tv65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peidd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqkrq")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_co0b0"]
atlas = ExtResource("12_n83cc")
region = Rect2(0, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0k0x"]
atlas = ExtResource("12_n83cc")
region = Rect2(530, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_iebcx"]
atlas = ExtResource("13_j8r3o")
region = Rect2(0, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgew0"]
atlas = ExtResource("13_j8r3o")
region = Rect2(530, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qc3s"]
atlas = ExtResource("14_qfht8")
region = Rect2(0, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgyf4"]
atlas = ExtResource("15_31018")
region = Rect2(0, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ykxj"]
atlas = ExtResource("14_qfht8")
region = Rect2(0, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uus8"]
atlas = ExtResource("15_31018")
region = Rect2(0, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_n33tx"]
atlas = ExtResource("16_kiww3")
region = Rect2(0, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmaou"]
atlas = ExtResource("16_kiww3")
region = Rect2(530, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_buco5"]
atlas = ExtResource("16_kiww3")
region = Rect2(1060, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_kex4f"]
atlas = ExtResource("16_kiww3")
region = Rect2(1590, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_vevcj"]
atlas = ExtResource("17_hj2sh")
region = Rect2(0, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpvgc"]
atlas = ExtResource("17_hj2sh")
region = Rect2(530, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmp8a"]
atlas = ExtResource("17_hj2sh")
region = Rect2(1060, 0, 530, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl6sf"]
atlas = ExtResource("17_hj2sh")
region = Rect2(1590, 0, 530, 530)

[sub_resource type="SpriteFrames" id="SpriteFrames_tomua"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_co0b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0k0x")
}],
"loop": true,
"name": &"bark_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iebcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgew0")
}],
"loop": true,
"name": &"bark_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qc3s")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgyf4")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ykxj")
}],
"loop": true,
"name": &"roll_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uus8")
}],
"loop": true,
"name": &"roll_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n33tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmaou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buco5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kex4f")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vevcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpvgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmp8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl6sf")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jncv8"]
atlas = ExtResource("18_fhmj2")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqke3"]
atlas = ExtResource("18_fhmj2")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7b18"]
atlas = ExtResource("18_fhmj2")
region = Rect2(1028, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_is4ue"]
atlas = ExtResource("18_fhmj2")
region = Rect2(1542, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_65lvb"]
atlas = ExtResource("18_fhmj2")
region = Rect2(2056, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl44g"]
atlas = ExtResource("19_ywkn0")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2oan"]
atlas = ExtResource("19_ywkn0")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylqga"]
atlas = ExtResource("19_ywkn0")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1sv8"]
atlas = ExtResource("19_ywkn0")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qxc2"]
atlas = ExtResource("19_ywkn0")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjhlv"]
atlas = ExtResource("20_af0im")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3rs5"]
atlas = ExtResource("20_af0im")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfh5i"]
atlas = ExtResource("21_fyf2e")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_66h8e"]
atlas = ExtResource("21_fyf2e")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0dh4"]
atlas = ExtResource("22_ptu2e")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cuvh"]
atlas = ExtResource("22_ptu2e")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts3el"]
atlas = ExtResource("22_ptu2e")
region = Rect2(1028, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8ea5"]
atlas = ExtResource("23_3dfgs")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6l3o"]
atlas = ExtResource("23_3dfgs")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk4bv"]
atlas = ExtResource("23_3dfgs")
region = Rect2(1028, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_82we2"]
atlas = ExtResource("24_0ukfm")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_3db5k"]
atlas = ExtResource("24_0ukfm")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei6q3"]
atlas = ExtResource("24_0ukfm")
region = Rect2(1028, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7jww"]
atlas = ExtResource("24_0ukfm")
region = Rect2(1542, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjpet"]
atlas = ExtResource("25_73gv5")
region = Rect2(0, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_43pey"]
atlas = ExtResource("25_73gv5")
region = Rect2(514, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpb1h"]
atlas = ExtResource("25_73gv5")
region = Rect2(1028, 0, 514, 514)

[sub_resource type="AtlasTexture" id="AtlasTexture_60w6r"]
atlas = ExtResource("25_73gv5")
region = Rect2(1542, 0, 514, 514)

[sub_resource type="SpriteFrames" id="SpriteFrames_80kpl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jncv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqke3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7b18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is4ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65lvb")
}],
"loop": true,
"name": &"bark_left",
"speed": 8.33
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl44g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2oan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylqga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1sv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qxc2")
}],
"loop": true,
"name": &"bark_right",
"speed": 8.33
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjhlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3rs5")
}],
"loop": true,
"name": &"idle_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfh5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66h8e")
}],
"loop": true,
"name": &"idle_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0dh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cuvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts3el")
}],
"loop": true,
"name": &"roll_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8ea5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6l3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk4bv")
}],
"loop": true,
"name": &"roll_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_82we2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3db5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei6q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7jww")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjpet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43pey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpb1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60w6r")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krk6c"]
size = Vector2(66, 50)

[sub_resource type="Animation" id="Animation_tyilq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkinChooser:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_62xkx"]
resource_name = "hurt_flash"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkinChooser:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.345098, 0.278431, 0.235294), Color(1, 1, 1, 1), Color(1, 0.345098, 0.278431, 0.235294), Color(1, 1, 1, 1), Color(1, 0.345098, 0.278431, 0.235294), Color(1, 1, 1, 1), Color(1, 0.345098, 0.278431, 0.235294), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jsxs5"]
_data = {
"RESET": SubResource("Animation_tyilq"),
"hurt_flash": SubResource("Animation_62xkx")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bu7lb"]
playback_mode = 1
random_pitch = 1.1
streams_count = 2
stream_0/stream = ExtResource("10_jtbrp")
stream_1/stream = ExtResource("11_wuebg")

[node name="Player" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
collision_layer = 2
collision_mask = 2081
motion_mode = 1
script = ExtResource("1_x43mx")

[node name="SkinChooser" type="Node2D" parent="."]
position = Vector2(-13, -38)
script = ExtResource("9_de2wb")

[node name="Skin1" type="AnimatedSprite2D" parent="SkinChooser"]
unique_name_in_owner = true
visible = false
position = Vector2(13, 15)
scale = Vector2(0.21, 0.21)
sprite_frames = SubResource("SpriteFrames_r4o7u")
animation = &"idle_left"
frame_progress = 0.815333

[node name="XRay" type="Node" parent="SkinChooser/Skin1"]
script = ExtResource("3_f3hsb")
x_ray_opacity = 0.4

[node name="Skin2" type="AnimatedSprite2D" parent="SkinChooser"]
unique_name_in_owner = true
visible = false
position = Vector2(13, 15)
scale = Vector2(0.23, 0.23)
sprite_frames = SubResource("SpriteFrames_tomua")
animation = &"bark_right"
frame_progress = 0.884062

[node name="XRay" type="Node" parent="SkinChooser/Skin2"]
script = ExtResource("3_f3hsb")
x_ray_opacity = 0.4

[node name="Skin3" type="AnimatedSprite2D" parent="SkinChooser"]
unique_name_in_owner = true
position = Vector2(13, 14)
scale = Vector2(0.23, 0.23)
sprite_frames = SubResource("SpriteFrames_80kpl")
animation = &"bark_left"

[node name="XRay" type="Node" parent="SkinChooser/Skin3"]
script = ExtResource("3_f3hsb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_krk6c")

[node name="Speak" type="Node2D" parent="."]
position = Vector2(-13, -38)
script = ExtResource("3_ne4cx")
speak_aura = ExtResource("4_8n4by")
radius = 20.0
speak_time = 0.5

[node name="RollTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="FallTimer" type="Timer" parent="."]
one_shot = true

[node name="HoleDetector" parent="." instance=ExtResource("6_eb6gp")]
scale = Vector2(3.3, 3.3)

[node name="Cursor" parent="." instance=ExtResource("29_60imv")]
before_fade = 0.4
fade_time = 0.3
fade_ease = 4.28709

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_jsxs5")
}

[node name="RollingSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_bu7lb")
volume_db = -7.0
bus = &"SFX"

[connection signal="timeout" from="RollTimer" to="." method="stop_roll"]
[connection signal="timeout" from="FallTimer" to="." method="end_fall"]
[connection signal="fall_in_hole" from="HoleDetector" to="." method="fall_in_hole"]
